--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-config-next": "^14.0.2",
     "lucide-react": "^0.292.0",
     "next": "^14.0.2",
+    "next-auth": "^4.24.5",
     "next-connect": "^1.0.0",
     "openai": "^4.19.0",
     "postcss": "^8.4.31",
