--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "format": "prettier \"**/*.{css,js,json,jsx,ts,tsx}\""
   },
   "dependencies": {
+    "@auth/dynamodb-adapter": "^1.0.9",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@types/google-one-tap": "^1.2.6",
     "@types/node": "^20.9.0",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
@@ -26,12 +28,14 @@
     "encoding": "^0.1.13",
     "eslint": "^8.53.0",
     "eslint-config-next": "^14.0.2",
+    "google-auth-library": "^9.3.0",
     "lucide-react": "^0.292.0",
-    "next": "^14.0.2",
+    "next": "^14.0.3",
     "next-auth": "^4.24.5",
     "next-connect": "^1.0.0",
     "openai": "^4.19.0",
     "postcss": "^8.4.31",
+    "punycode": "^2.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
